--- a/sample/headers.html
+++ b/sample/headers.html
@@ -73,8 +73,8 @@ Based on Twitter Bootstrap
                     <!--#include virtual="/sample/modules/headers.html" -->
                 </div>
                  <div class="half">
-                    <h2><label for="sample-headers">Source Code:</label></h2>
-                    <textarea id="sample-headers" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/headers.html" --></textarea>
+                    <h2><strong>Source Code:</strong></h2>
+                    <textarea id="sample-headers" class="form-control" rows="10" cols="80" aria-label="HTML Markup for Headers & Paragraphs"><!--#include virtual="/sample/modules/headers.html" --></textarea>
                 </div> 
             </div>
             <br />
