--- a/sample/hero-info.html
+++ b/sample/hero-info.html
@@ -85,8 +85,8 @@ Based on Twitter Bootstrap
                             
                         </div>
                         <div class="modal-body">
-                            <label for="sample-news-list-sidebar">Source Code:</label>
-                            <textarea id="sample-news-list-sidebar" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/hero-info.html" --></textarea>
+                            <strong>Source Code:</strong>
+                            <textarea id="sample-news-list-sidebar" class="form-control" rows="10" cols="80" aria-label="Source Code of HTML Markup for Hero Info"><!--#include virtual="/sample/modules/hero-info.html" --></textarea>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
