--- a/sample/icon-blocks.html
+++ b/sample/icon-blocks.html
@@ -95,8 +95,8 @@ Based on Twitter Bootstrap
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
-                                        <label for="sample-news-blocks">Source Code:</label>
-                                        <textarea id="sample-news-blocks" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/icon-blocks.html" --></textarea>
+                                        <strong>Source Code:</strong>
+                                        <textarea id="sample-news-blocks" class="form-control" rows="10" cols="80" aria-label="Source Code of HTML Markup for Icon Blocks"><!--#include virtual="/sample/modules/icon-blocks.html" --></textarea>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -125,8 +125,8 @@ Based on Twitter Bootstrap
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
                                     <div class="modal-body">
-                                        <label for="sample-image-blocks">Source Code:</label>
-                                        <textarea id="sample-image-blocks" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/icon-image-blocks.html" --></textarea>
+                                        <strong>Source Code:</strong>
+                                        <textarea id="sample-image-blocks" class="form-control" rows="10" cols="80" aria-label="Source Code of HTML Markup for Icon Image Blocks"><!--#include virtual="/sample/modules/icon-image-blocks.html" --></textarea>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -160,8 +160,8 @@ Based on Twitter Bootstrap
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body">
-                            <label for="sample-links">Source Code:</label>
-                            <textarea id="sample-links" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/icon-links.html" --></textarea>
+                            <strong>Source Code:</strong>
+                            <textarea id="sample-links" class="form-control" rows="10" cols="80" aria-label="Source Code of HTML Markup for Icon Links"><!--#include virtual="/sample/modules/icon-links.html" --></textarea>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
