--- a/sample/modules/icon-links.html
+++ b/sample/modules/icon-links.html
@@ -1,5 +1,5 @@
 <!--Icon Links-->
-<div class="section-primary section-transparent text-center">
+<div class="section-transparent text-center">
     <div class="group  p-b-md">
         <div class="fifth">
             <a href="#" class="icon-link">
