--- a/sample/modules/news-block.html
+++ b/sample/modules/news-block.html
@@ -33,7 +33,7 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email DMV</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
@@ -81,7 +81,7 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email CDT</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
@@ -129,7 +129,7 @@
                 <ul class="list-inline m-y-0">
                     <li class="list-inline-item m-r m-y-0">
                         <a class="news-icon bg-gray-light bg-primary-hover color-gray-dark rounded-50x" href="#">
-                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email</span>
+                            <i class="ca-gov-icon-email"></i><span class="sr-only">Email CDTFA</span>
                         </a>
                     </li>
                     <li class="list-inline-item m-r m-y-0">
