--- a/sample/course-detail.html
+++ b/sample/course-detail.html
@@ -87,16 +87,16 @@ Based on Twitter Bootstrap
 
                     <div class="tab-group">
                         <ul id="sourceCode" class="nav nav-tabs responsive" role="tablist">
-                            <li class="active"><a href="#html" role="tab" data-toggle="tab">HTML Markup</a></li>
-                            <li><a href="#microdata" role="tab" data-toggle="tab">Microdata</a></li>
+                            <li class="active"><a href="#html" role="tab" data-toggle="tab" aria-label="HTML Markup for Course Detail"><strong>HTML Markup</strong></a></li>
+                            <li><a href="#microdata" role="tab" data-toggle="tab" aria-label="Microdata for Course Detail"><strong>Microdata</strong></a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html">
-                                 <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/course-detail.html" --></textarea>
+                                 <textarea aria-label="Source Code of HTML Markup for Course Detail" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/course-detail.html" --></textarea>
                             </div>
                             <div class="tab-pane" id="microdata">
-                                 <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/course-detail-schema.html" --></textarea>
+                                 <textarea aria-label="Source Code of Microdata for Course Detail" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/course-detail-schema.html" --></textarea>
                             </div>
                         </div>
                     </div>
