--- a/sample/event-list.html
+++ b/sample/event-list.html
@@ -83,17 +83,17 @@ Based on Twitter Bootstrap
             
             <div class="tab-group">
                 <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                    <li class="active"><a href="#html" role="tab" data-toggle="tab">HTML Markup</a></li>
-                    <li><a href="#microdata" role="tab" data-toggle="tab">Microdata</a></li>
+                    <li class="active"><a href="#html" role="tab" data-toggle="tab" aria-label="HTML Markup for Event List"><strong>HTML Markup</strong></a></li>
+                    <li><a href="#microdata" role="tab" data-toggle="tab" aria-label="Microdata for Event List"><strong>Microdata</strong></a></li>
                 </ul>
                 <!-- Tab panes -->
                 <div class="tab-content responsive">
                     <div class="tab-pane active" id="html">
-                         <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list.html" --></textarea>
+                         <textarea class="form-control" rows="10" cols="80" aria-label="Source Code of HTML Markup for Event List"><!--#include virtual="/sample/modules/event-list.html" --></textarea>
                     </div>
                     <div class="tab-pane" id="microdata">
                         <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly for each event-item.</p>
-                         <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-schema.html" --></textarea>
+                         <textarea class="form-control" rows="10" cols="80" aria-label="Source Code of Microdata for Event List"><!--#include virtual="/sample/modules/event-list-schema.html" --></textarea>
                     </div>
                 </div>
             </div>
@@ -110,17 +110,17 @@ Based on Twitter Bootstrap
             
             <div class="tab-group">
                 <ul id="sourceCodeThumb" class="nav nav-tabs" role="tablist">
-                    <li class="active"><a href="#thumbhtml" role="tab" data-toggle="tab">HTML Markup</a></li>
-                    <li><a href="#thumbmicrodata" role="tab" data-toggle="tab">Microdata</a></li>
+                    <li class="active"><a href="#thumbhtml" role="tab" data-toggle="tab" aria-label="HTML Markup for Event List with Thumbnails"><strong>HTML Markup</strong></a></li>
+                    <li><a href="#thumbmicrodata" role="tab" data-toggle="tab" aria-label="Microdata for Event List with Thumbnails"><strong>Microdata</strong></a></li>
                 </ul>
                 <!-- Tab panes -->
                 <div class="tab-content responsive">
                     <div class="tab-pane active" id="thumbhtml">
-                         <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-thumbnail.html" --></textarea>
+                         <textarea class="form-control" rows="10" cols="80" aria-label="Source Code of HTML Markup for Event List with Thumbnails"><!--#include virtual="/sample/modules/event-list-thumbnail.html" --></textarea>
                     </div>
                     <div class="tab-pane" id="thumbmicrodata">
                         <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly for each event-item.</p>
-                         <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/event-list-thumbnail-schema.html" --></textarea>
+                         <textarea class="form-control" rows="10" cols="80" aria-label="Source Code of Microdata for Event List with Thumbnails"><!--#include virtual="/sample/modules/event-list-thumbnail-schema.html" --></textarea>
                     </div>
                 </div>
             </div>
