--- a/sample/job-list.html
+++ b/sample/job-list.html
@@ -89,17 +89,17 @@ Based on Twitter Bootstrap
                      
                      <div class="tab-group">
                         <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                            <li class="active"><a href="#html" role="tab" data-toggle="tab">HTML Markup</a></li>
-                            <li><a href="#microdata" role="tab" data-toggle="tab">Microdata</a></li>
+                            <li class="active"><a href="#html" role="tab" data-toggle="tab" aria-label="HTML Markup for Job List"><strong>HTML Markup</strong></a></li>
+                            <li><a href="#microdata" role="tab" data-toggle="tab" aria-label="Microdata for Job List"><strong>Microdata</strong></a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html">
-                                 <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/job-list.html" --></textarea>
+                                 <textarea aria-label="HTML Markup" class="form-control" rows="10" cols="80" aria-label="Source Code of HTML Markup for Job List"><!--#include virtual="/sample/modules/job-list.html" --></textarea>
                             </div>
                             <div class="tab-pane" id="microdata">
                                 <p class="alert alert-info">NOTE: This module makes use of a <code>datetime</code> property set in the <strong>ISO 8601</strong> format. Be sure to set the time correctly for each job-item.</p>
-                                 <textarea aria-label="Microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/job-list-schema.html" --></textarea>
+                                 <textarea aria-label="Microdata" class="form-control" rows="10" cols="80" aria-label="Source Code of Microdata for Job List"><!--#include virtual="/sample/modules/job-list-schema.html" --></textarea>
                             </div>
                         </div>
                     </div>
