--- a/sample/profile-banners.html
+++ b/sample/profile-banners.html
@@ -81,16 +81,16 @@ Based on Twitter Bootstrap
 
                     <div class="tab-group">
                         <ul id="sourceCode" class="nav nav-tabs" role="tablist">
-                            <li class="active"><a href="#html" role="tab" data-toggle="tab">HTML Markup</a></li>
-                            <li><a href="#microdata" role="tab" data-toggle="tab">Microdata</a></li>
+                            <li class="active"><a href="#html" role="tab" data-toggle="tab" aria-label="HTML Markup for Profile Banners"><strong>HTML Markup</strong></a></li>
+                            <li><a href="#microdata" role="tab" data-toggle="tab" aria-label="Microdata for Profile Banners"><strong>Microdata</strong></a></li>
                         </ul>
                         <!-- Tab panes -->
                         <div class="tab-content responsive">
                             <div class="tab-pane active" id="html">
-                                <textarea aria-label="HTML Markup" id="sample-news-list" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/profile-banners.html" --></textarea>
+                                <textarea id="sample-news-list" class="form-control" rows="10" cols="80" aria-label="Source Code of HTML Markup for Profile Banners"><!--#include virtual="/sample/modules/profile-banners.html" --></textarea>
                             </div>
                             <div class="tab-pane" id="microdata">
-                                <textarea aria-label="Microdata" id="sample-news-list-microdata" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/profile-banners-schema.html" --></textarea>
+                                <textarea id="sample-news-list-microdata" class="form-control" rows="10" cols="80" aria-label="Source Code of Microdata for Profile Banners"><!--#include virtual="/sample/modules/profile-banners-schema.html" --></textarea>
                             </div>
                         </div>
                     </div>
