Added organiztion logo description to branding

--- a/ssi/branding.html
+++ b/ssi/branding.html
@@ -1,4 +1,4 @@
 <!-- header branding -->
 <div class="branding">
-<div class="header-organization-banner"><a href="/"><img src="/images/template-logo.png" alt="Organization Title" /></a></div>
+<div class="header-organization-banner"><a href="/"><img src="/images/template-logo.png" alt="State of California Website Template logo" /></a></div>
 </div>
