Added titles to breadcrumbs links in sample pages to fix WCAG 2.4.4 accessibility issue.

--- a/contact.html
+++ b/contact.html
@@ -67,8 +67,8 @@ Based on Twitter Bootstrap
             <main class="main-primary">
                 <!-- InstanceBeginEditable name="MainContent" -->
                 <ol class="breadcrumb">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/sample/index.html">Examples</a></li>
+                    <li><a href="index.html" title="Home page">Home</a></li>
+                    <li><a href="/sample/index.html" title="Examples landing page">Examples</a></li>
                     <li class="active">Contact Us</li>
                 </ol>
                 <h1>Contact Us</h1>
