--- a/sample/service-group.html
+++ b/sample/service-group.html
@@ -60,10 +60,10 @@ Version 5.5.2
     <div id="main-content" class="main-content">
 
         <main class="main-primary">
-            <div class="container">
+            <div class="container">            
                 <ol class="breadcrumb">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="index.html">Examples</a></li>
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="index.html" title="Examples landing page">Examples</a></li>
                     <li class="active">Service Group</li>
                 </ol>
 
