--- a/sample/slideshow-header-banner.html
+++ b/sample/slideshow-header-banner.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 
 <!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
@@ -68,10 +68,10 @@ Based on Twitter Bootstrap
     <!-- Include Optional Slideshow banner -->
     <!--#include virtual="/ssi/header-slideshow-banner.html" -->
     <div class="section">
-        <main role="main" class="main-primary">
+        <main role="main" class="main-primary">            
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Slideshow Header Banner</li>
             </ol>
 
