--- a/Instructions.html
+++ b/Instructions.html
@@ -49,10 +49,9 @@
 
 <div id="main-content" class="main-content">
     <div class="wrapper">
-        <main role="main" class="main-primary">
-            <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+        <main role="main" class="main-primary">                                         <ol class="breadcrumb">
+                                             <li><a href="../index.html" title="Home page">Home</a></li>
+                                             <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Instructions</li>
             </ol>
           
