--- a/about.html
+++ b/about.html
@@ -67,8 +67,8 @@ Based on Twitter Bootstrap
             <main class="main-primary">
                 <!-- InstanceBeginEditable name="MainContent" -->
                 <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="/sample/index.html">Examples</a></li>
+                    <li><a href="index.html" title="Home page">Home</a></li>
+                    <li><a href="/sample/index.html" title="Examples landing page">Examples</a></li>
                     <li class="active">About</li>
                 </ol>
                     <article class="half p-l-0">
