--- a/sample/accordions.html
+++ b/sample/accordions.html
@@ -50,10 +50,9 @@ Version 5.5.2
 
                              <div id="main-content" class="main-content">
                                  <div class="section">
-                                     <main class="main-primary">
-                                         <ol class="breadcrumb">
-                                             <li><a href="../index.html">Home</a></li>
-                                             <li><a href="index.html">Examples</a></li>
+                                     <main class="main-primary">            <ol class="breadcrumb">
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                                              <li class="active">Accordions</li>
                                          </ol>
 
