--- a/sample/colorscheme-mono.html
+++ b/sample/colorscheme-mono.html
@@ -152,10 +152,9 @@ Version 5.5.2
 
     </header>
     <div id="main-content" class="main-content">
-        <div class="container">
-            <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+        <div class="container">            <ol class="breadcrumb">
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Mono</li>
             </ol>
         </div>
