--- a/sample/icon-blocks.html
+++ b/sample/icon-blocks.html
@@ -59,10 +59,10 @@ Based on Twitter Bootstrap
     <div id="main-content" class="main-content">
         <main class="main-primary">
             <div class="section">
-                <div class="container">
+                <div class="container">            
                 <ol class="breadcrumb">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="index.html">Examples</a></li>
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="index.html" title="Examples landing page">Examples</a></li>
                     <li class="active">Icon Blocks</li>
                 </ol>
 
