--- a/sample/navigation-megamenu-accessible2.html
+++ b/sample/navigation-megamenu-accessible2.html
@@ -375,10 +375,9 @@ if (typeof jQuery.migrateWarnings == 'undefined') { // or typeof jQuery.fn.live 
 
 <main class="main-primary">
 
-    <div class="container mt-5">
-        <ol class="breadcrumb">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="index.html">Examples</a></li>
+    <div class="container mt-5">            <ol class="breadcrumb">
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
             <li class="active">Panels</li>
         </ol>
 
