--- a/sample/news-detail.html
+++ b/sample/news-detail.html
@@ -56,10 +56,10 @@ Based on Twitter Bootstrap
 
 <div id="main-content" class="main-content">
     <div class="section">
-        <main class="main-primary">
+        <main class="main-primary">            
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">News Detail</li>
             </ol>
             
