--- a/sample/page-templates.html
+++ b/sample/page-templates.html
@@ -58,10 +58,10 @@ Version 5.5.2
         <!-- Include Page Template -->
         <!--#include virtual="/ssi/header-primary-banner.html" -->
         <div class="section">
-            <main class="main-primary">
+            <main class="main-primary">            
                 <ol class="breadcrumb">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="index.html">Examples</a></li>
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="index.html" title="Examples landing page">Examples</a></li>
                     <li class="active">Page Templates</li>
                 </ol>
 
