--- a/sample/rotating-header-banner.html
+++ b/sample/rotating-header-banner.html
@@ -55,10 +55,10 @@ Based on Twitter Bootstrap
     <!-- Include Optional Slideshow banner -->
     <!--#include virtual="/ssi/header-slideshow-banner.html" -->
     <div class="section">
-        <main class="main-primary">
+        <main class="main-primary">            
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Rotating Banner</li>
             </ol>
 
