--- a/structure.html
+++ b/structure.html
@@ -68,7 +68,7 @@ Based on Twitter Bootstrap
                 <div id="main-content" class="main-content">
                         <main role="main" class="main-primary">
                             <ol class="breadcrumb">
-                                <li><a href="/index.html">Home</a></li>
+                                <li><a href="index.html" title="Home page">Home</a></li>
                                 <li class="active">Structure</li>
                             </ol>
                             <h1>State Template Structure</h1>
