Added titles to breadcrumbs links in sample pages to fix WCAG 2.4.4 accessibility issue.

--- a/sample/colorscheme-santabarbara.html
+++ b/sample/colorscheme-santabarbara.html
@@ -165,8 +165,8 @@ Version 5.0.5
     <div id="main-content" class="main-content">
         <div class="container">
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Santa Barbara</li>
             </ol>
         </div>
