--- a/sample/navigation-megamenu-accessible2.html
+++ b/sample/navigation-megamenu-accessible2.html
@@ -386,8 +386,8 @@ Based on Twitter Bootstrap
                     <!-- Page Title-->
                     <div class="container p-t-sm p-b-lg">
                         <ol class="breadcrumb">
-                            <li><a href="../index.html">Home</a></li>
-                            <li><a href="index.html">Examples</a></li>
+                            <li><a href="../index.html" title="Home page">Home</a></li>
+                            <li><a href="index.html" title="Examples landing page">Examples</a></li>
                             <li class="active">Template</li>
                         </ol>
 
