--- a/sample/service-group.html
+++ b/sample/service-group.html
@@ -62,8 +62,8 @@ Version 5.0.5
         <main class="main-primary">
             <div class="container">
                 <ol class="breadcrumb">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="index.html">Examples</a></li>
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="index.html" title="Examples landing page">Examples</a></li>
                     <li class="active">Service Group</li>
                 </ol>
 
