--- a/Instructions.html
+++ b/Instructions.html
@@ -51,8 +51,8 @@
     <div class="wrapper">
         <main role="main" class="main-primary">
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="index.html" title="Home page">Home</a></li>
+                <li><a href="/sample/index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Instructions</li>
             </ol>
           
