--- a/sample/contact-widgets.html
+++ b/sample/contact-widgets.html
@@ -58,8 +58,8 @@ Based on Twitter Bootstrap
     <div class="section">
         <article class="main-primary">
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Contact Us Widgets</li>
             </ol>
             <h1>Contact Widgets</h1>
