--- a/sample/exam-detail-panel.html
+++ b/sample/exam-detail-panel.html
@@ -58,8 +58,8 @@ Based on Twitter Bootstrap
     <div class="section">
         <main class="main-primary">
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Exam Detail (Panel)</li>
             </ol>
             
