--- a/sample/icon-blocks.html
+++ b/sample/icon-blocks.html
@@ -61,8 +61,8 @@ Based on Twitter Bootstrap
             <div class="section">
                 <div class="container">
                 <ol class="breadcrumb">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="index.html">Examples</a></li>
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="index.html" title="Examples landing page">Examples</a></li>
                     <li class="active">Icon Blocks</li>
                 </ol>
 
