--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -198,8 +198,8 @@ p {
         <main class="main-primary">
 
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Icon Fonts</li>
             </ol>
 
