--- a/sample/modules/breadcrumb.html
+++ b/sample/modules/breadcrumb.html
@@ -1,5 +1,5 @@
 <ol class="breadcrumb">
-    <li><a href="../index.html">Home</a></li>
-    <li><a href="index.html">Examples</a></li>
+    <li><a href="../index.html" title="Home page">Home</a></li>
+    <li><a href="index.html" title="Examples landing page">Examples</a></li>
     <li class="active">Breadcrumb</li>
 </ol>
