--- a/sample/navigation-active.html
+++ b/sample/navigation-active.html
@@ -53,8 +53,8 @@ Based on Twitter Bootstrap
     <div class="section">
         <main class="main-primary">
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Active Navigation Item</li>
             </ol>
 
