--- a/sample/navigation-megamenu-accessible.html
+++ b/sample/navigation-megamenu-accessible.html
@@ -445,8 +445,8 @@ Version 5.0.5
         <div class="section">
             <main class="main-primary">
                 <ol class="breadcrumb">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="index.html">Examples</a></li>
+                    <li><a href="../index.html" title="Home page">Home</a></li>
+                    <li><a href="index.html" title="Examples landing page">Examples</a></li>
                     <li class="active">Megamenu (State Template v4)</li>
                 </ol>
 
