--- a/sample/sections.html
+++ b/sample/sections.html
@@ -58,8 +58,8 @@ Based on Twitter Bootstrap
     <main class="main-primary">
         <div class="container">
             <ol class="breadcrumb">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="index.html">Examples</a></li>
+                <li><a href="../index.html" title="Home page">Home</a></li>
+                <li><a href="index.html" title="Examples landing page">Examples</a></li>
                 <li class="active">Sections</li>
             </ol>
         </div>
