--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -8,7 +8,7 @@ Options are: megadropdown dropdown singlelevel
 <nav id="navigation" class="main-navigation megadropdown auto-highlight">
     <ul id="nav_list" class="top-level-nav">
         <li class="nav-item">
-            <a href="/sample/" class="first-level-link"  title="Examples landing page"><span class="ca-gov-icon-gears"></span>Examples</a>
+            <a href="/sample/" class="first-level-link"><span class="ca-gov-icon-gears"></span>Examples</a>
             <div class="sub-nav">
                 <div class="half">
                     <ul class="second-level-nav">
