Made accordion module accessible.

--- a/sample/modules/accordion.html
+++ b/sample/modules/accordion.html
@@ -1,11 +1,11 @@
-<div class="panel-group" id="example-accordion" role="tablist" aria-multiselectable="true">
+<div class="panel-group accordion" id="example-accordion" role="tablist" aria-multiselectable="true">
     <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingOne">
             <h4 class="panel-title">
-                <a role="button" data-toggle="collapse" data-parent="#example-accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Accordion #1</a>
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#example-accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Accordion #1</a>
             </h4>
         </div>
-        <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+        <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class="panel-body">
                 Accordion 1 content
             </div>
