--- a/ssi/alert-banner.html
+++ b/ssi/alert-banner.html
@@ -2,6 +2,6 @@
     <div class="container">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <span class="alert-level"><span class="ca-gov-icon-important" aria-hidden="true"></span>SEVERE ALERT!</span><span class="alert-text">2015-12-21, 10:17 AM - Flash Flood in the Northern California, Sacramento and Placer Counties until 12:15 PM.</span>
-        <a href="" class="alert-link btn btn-default btn-xs">Read More</a>
+          <a href="" class="alert-link btn btn-default btn-xs">More Information</a>
     </div>
 </div>
