Fixed carousel page accessibility errors

--- a/sample/carousels.html
+++ b/sample/carousels.html
@@ -66,8 +66,8 @@ Based on Twitter Bootstrap
                     <div class="two-thirds">
                         <h2>Content Carousel</h2>
                         <p>A content carousel component provides a solution for placing text or other content bove an image. With responsive and dynamic content in mind , there is two element configurations for setting the height of the slide. One which fits to the content, and one which fits to the image.</p>
-                        <p>Our recommendation is use the <b>content fit</b> when you have a large amount of text, descriptive content, etc. <i>Note: </i> that in this case your background image should be a generic pattern or design.</p>
-                        <p>On the other hand you should use the <b>image fit</b> when you have only a single line or so of text, a simple header or button, html5 video or any content which would take up less space than your image or video.</p>
+                        <p>Our recommendation is use the <strong>content fit</strong> when you have a large amount of text, descriptive content, etc. <i>Note: </i> that in this case your background image should be a generic pattern or design.</p>
+                        <p>On the other hand you should use the <strong>image fit</strong> when you have only a single line or so of text, a simple header or button, html5 video or any content which would take up less space than your image or video.</p>
                         <p>For any content carousel item, you can also apply the class of <code>backdrop</code> which will apply a slight opaque grey background to the content. This is useful when your images do not have enough contrast with your text.</p>
                     </div>
                     <div class="third">
