Fixed forms page accessibility errors

--- a/sample/modules/form-select.html
+++ b/sample/modules/form-select.html
@@ -1,5 +1,6 @@
 <!--Select-->
 <label class="select">
+    <span class="sr-only">Select options:</span>
     <select name="email" id="email">
         <option>Option 1</option>
         <option>Option 2</option>
@@ -9,7 +10,8 @@
 </label>
 
 <!--Bootstrap 4 custom select-->
-<select class="custom-select">
+<label for="Select" class="sr-only">Please select your options:</label>
+<select class="custom-select" id="Select">
     <option selected>Open this select menu</option>
     <option value="1">One</option>
     <option value="2">Two</option>
