--- a/sample/modules/form-states.html
+++ b/sample/modules/form-states.html
@@ -19,7 +19,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text is-valid"><i class="ca-gov-icon-person"></i></span>
             </div>
-            <input type="text" class="form-control is-valid" id="validationServerLastName" placeholder="Last Name" aria-describedby="inputGroupPrepend3" required>
+            <input type="text" class="form-control is-valid" id="validationServerLastName" placeholder="Last Name" required>
             <div class="valid-feedback">
                 Looks Good.
             </div>
@@ -31,7 +31,7 @@
             <div class="input-group-prepend">
                 <span class="input-group-text is-invalid"><i class="ca-gov-icon-person"></i></span>
             </div>
-            <input type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" aria-describedby="inputGroupPrepend3" required>
+            <input type="text" class="form-control is-invalid" id="validationServerUsername" placeholder="Username" required>
             <div class="invalid-feedback">
                 Please choose a username.
             </div>
