Fixed featured search page accessibility errors

--- a/sample/featured-search.html
+++ b/sample/featured-search.html
@@ -5,7 +5,7 @@
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
 <!--[if (gt IE 9)]><!-->
 <html class="no-js" lang="en">
- <!--<![endif]-->
+<!--<![endif]-->
 <head>
     <!--
     California State Template
@@ -96,9 +96,9 @@
                         <p>&nbsp;</p>
                     </div>
                     <div class="half">
-                        <h2>Source Code:</h2>
-                        <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/featured-search.html" -->
-                            </code></pre>
+                        <h2 id="source-code1">Source Code <span class="sr-only">For Search Container</span>:</h2>
+                        <textarea id="basic-progress" class="form-control" rows="10" cols="80" aria-labelledby="source-code1"><!--#include virtual="/sample/modules/featured-search.html" -->
+                         </textarea>
                     </div>
                     <div class="clearfix"></div>
 
@@ -112,8 +112,8 @@
                         <p>The number of buttons can be customized from two to six including the menu options for each one. All of the configurations are located in the <code>ask-bar.html</code> file located in the <code>ssi</code> folder. Remember to update the <code>&lt;a&gt;</code>class right below the panel div tag of each ask button to the number of total buttons you plan to use. The options are: two, three, four, five and six. The number you pick should coinside with the number of ask buttons in the <code>ask-bar.html</code> file located in the <code>ssi</code> folder.</p>
                     </div>
                     <div class="half">
-                        <h2>Source Code:</h2>
-                        <pre><code class="overflow-auto"><!--#include virtual="/sample/modules/ask-panel.html" --></code></pre>
+                        <h2 id="source-code2">Source Code <span class="sr-only">For Ask Bar</span>:</h2>
+                        <textarea id="basic-progress2" class="form-control" rows="10" cols="80" aria-labelledby="source-code2"><!--#include virtual="/sample/modules/ask-panel.html" --></textarea>
                     </div>
 
                     <div class="clearfix"></div>
