Fixed business profile page accessibility errors

--- a/sample/modules/service-tiles-empty.html
+++ b/sample/modules/service-tiles-empty.html
@@ -48,9 +48,9 @@
                             </div>
 
                             <ul class="list-inline list-unstyled m-t-md social">
-                                <li><a href=""><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter</span></span></a></li>
-                                <li><a href=""><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook</span></span></a></li>
-                                <li><a href=""><span class="ca-gov-icon-google-plus" ><span class="sr-only">Google+</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-twitter"><span class="sr-only">DMV Twitter</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-facebook"><span class="sr-only">DMV Facebook</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-google-plus" ><span class="sr-only">DMV Google+</span></span></a></li>
                             </ul>
                         </div>
 
@@ -94,9 +94,9 @@
                             </div>
 
                             <ul class="list-inline list-unstyled m-t-md social">
-                                <li><a href=""><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter</span></span></a></li>
-                                <li><a href=""><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook</span></span></a></li>
-                                <li><a href=""><span class="ca-gov-icon-google-plus"><span class="sr-only">Google+</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-twitter"><span class="sr-only">Twitter (DMV)</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-facebook"><span class="sr-only">Facebook (DMV)</span></span></a></li>
+                                <li><a href=""><span class="ca-gov-icon-google-plus"><span class="sr-only">Google+ (DMV)</span></span></a></li>
                             </ul>
                         </div>
 
