Fixed profile landing page accessibility errors

--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -24,7 +24,7 @@
             <div class="quarter">
                 <h4>Support</h4>
                 <ul class="list-unstyled">
-                    <li><a href=""  class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Email</a></li>
+                    <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Email <span class="sr-only">Us</span></a></li>
                     <li><a href=""  class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Feedback Survey</a></li>
                     <li><a href=""  class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Technical Issues</a></li>
                     <li ><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>&#43;1.800.807.6755</a></li>
