fixed navigation-megamenu example page

--- a/sample/navigation-megamenu.html
+++ b/sample/navigation-megamenu.html
@@ -103,7 +103,7 @@ Based on Twitter Bootstrap
         &lt;/ul&gt;
     &lt;/div&gt;
     
-    &lt;div class=&quot;<strong class="text-accent7">quarter</strong> <span class="text-accent1">with-image-left</span>&quot;&gt;
+    &lt;div class=&quot;<strong class="text-accent7">quarter</strong> <span class="text-accent-p2">with-image-left</span>&quot;&gt;
         &lt;div class=&quot;nav-media&quot; style=&quot;background:url(&#39;/sample/images/sample-nav-image2.jpg&#39;)&quot;&gt;&lt;/div&gt;
     &lt;/div&gt;
 &lt;/div&gt;
