Fixed mobile navigation icon links page accessibility errors

--- a/sample/modules/mobile-controls-sample.html
+++ b/sample/modules/mobile-controls-sample.html
@@ -1,9 +1,24 @@
 <!-- mobile navigation controls -->
 <div class="mobile-controls">
-    <span class="mobile-control toggle-menu float-right"><span class="ca-gov-icon-menu" aria-hidden="true"></span><span class="sr-only">Menu</span></span>
+
     <span class="mobile-control-group mobile-header-icons">
         <!-- Add mobile control here. THis will be on the right side of the mobile page header section -->
-    	<span class="mobile-control contact-link"><span class="ca-gov-icon-chat" aria-hidden="true"></span><span class="sr-only">Contact</span></span>    
+
     </span>
-    <span class="mobile-control toggle-search"><span class="ca-gov-icon-search" aria-hidden="true"></span><span class="sr-only">Search</span></span>
+    <div class="mobile-control-group main-nav-icons d-flex flex-row align-items-center w-100">
+        <a href="/contact.html" class="mobile-control contact-link no-underline p-a-sm color-primary--hover ml-auto"><span class="ca-gov-icon-chat" aria-hidden="true"></span><span class="sr-only">Contact</span></a>
+
+        <button class="mobile-control toggle-search p-a-sm">
+            <span class="ca-gov-icon-search hidden-print" aria-hidden="true"></span><span class="sr-only">Search</span>
+        </button>
+
+        <button id="nav-icon3" class="mobile-control toggle-menu" aria-expanded="false" aria-controls="navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span class="sr-only">Menu</span>
+        </button>
+
+    </div>
 </div>
